--- a/알고리즘/그리디/숫자 카드 게임.md
+++ b/알고리즘/그리디/숫자 카드 게임.md
@@ -5,7 +5,7 @@
     4. 따라서 처음에 카드를 골라날 행을 선택할 때, 이후에 해당 행에서 가장 숫자가 낮은 카드를 뽑을것을 고려하여 최종적으로 가장 높은 숫자의 카드를 뽑을 수 있도록 전략을 세워야한다.
 
 #### 그리디 알고리즘
-  '각 행마다 가장 작은 수를 찾은 뒤 그 수 중에서 가장 큰 수'를 찾는다.
+  '각 행마다 가장 작은 수를 찾은 뒤 그 수 중에서 가장 큰 수'를 찾는다. <br/>
   각 행마다 탐색하면서 가장 작은 수를 N 크기의 result 배열에 삽입해준다. result 배열 중 가장 큰 수를 찾기 위해서 배열을 오름차순 정렬 후 제일 큰값을 출력해준다.
 
 
