--- a/알고리즘/구현/게임 개발.md
+++ b/알고리즘/구현/게임 개발.md
@@ -18,32 +18,87 @@
 ``` java
 import java.util.*;
 import java.io.*;
-
 public class Main {
-public static void main(String args[]) throws IOException {
-    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-    StringTokenizer st = new StringTokenizer(br.readLine());
-    int answer = 0;
+    static int direction;
+    public static void main(String args[]) throws IOException {
+        int answer = 1;
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringTokenizer st = new StringTokenizer(br.readLine());
+        // 가로 M 세로 N 크기의 맵
+        int N = Integer.parseInt(st.nextToken());
+        int M = Integer.parseInt(st.nextToken());
+
+        
+        String[] data = br.readLine().split(" ");
+        // 현재 좌표와 방향 좌표 입력받기
+        int x = Integer.parseInt(data[0]);
+        int y = Integer.parseInt(data[1]);
+        direction = Integer.parseInt(data[2]);
+        
+        // 지도를 0으로 모두 초기화
+        int[][] map = new int[M][N];
+        // 모든 지도를 방문처리 x
+        boolean [][] visited = new boolean[M][N];
+        visited[x][y] = true;
+        
+        //지도 입력받기
+        for(int i=0;i<M;i++){
+            st = new StringTokenizer(br.readLine());
+            for(int j=0;j<N;j++){
+                map[i][j] = Integer.parseInt(st.nextToken());
+            }
+        }
+        
+        //북 : 0 동 : 1 남 : 2 서 : 3
+        int[] dx = new int[]{-1,0,1,0};
+        int[] dy = new int[]{0,1,0,-1};
+        // 방향 체크 여부
+        int turn_time = 0;
+        // 이동
+        while(true){
+            // 왼쪽 방향이동
+            turn_left();
+            // 왼쪽으로 이동 좌표
+            int nx = x + dx[direction];
+            int ny = y + dy[direction];
+            // 방문여부와 육지여부 확인
+            if(!visited[nx][ny] && map[nx][ny]==0){
     
-    int N = Integer.parseInt(st.nextToken());
-    int M = Integer.parseInt(st.nextToken());
-    
-    String[] data = br.readLine().split(" ");
-    int x = Integer.parseInt(data[0]);
-    int y = Integer.parseInt(data[1]);
-    int direction = Integer.parseInt(data[2]);
-    
-    int[] dx = new int[]{-1,0,1,0};
-    int[] dy = new int[]{0,-1,0,1};
-    int[][] map = new int[M][N];
-    
-    for(int i=0;i<M;i++){
-        st = new StringTokenizer(br.readLine());
-        for(int j=0;j<N;j++){
-            map[i][j] = Integer.parseInt(st.nextToken());
+                visited[nx][ny] = true;        
+                x = nx;
+                y = ny;
+                answer ++;
+                turn_time = 0;
+                continue;
+            }else{
+                turn_time+=1;
+            }
+            // 4방향을 모두 체크한경우
+            if(turn_time==4){
+                nx = x - dx[direction];
+                ny = y - dy[direction];
+                
+                if(map[nx][ny]==0){
+                    x = nx;
+                    y = ny;
+                }else{
+                    break;
+                }
+                turn_time =0;
+            }
+        }
+        System.out.println(answer);
+    }
+    static void turn_left(){
+        direction -=1;
+        if(direction==-1){
+            direction =3;
         }
     }
-    System.out.println(direction);
 }
-}
-        ```
+```
+
+
+#### 이문제를 해결하지 못한 이유에는 북, 동, 남, 서 자체에 대해서 왼쪽 회전과 뒤로 이동할때에 대한 처리에 대한 문제가 어려웠다.
+      해설을 보고 난 뒤 북,동,남,를 방향을 dx , dy 좌표로 잡고 회전에 따라 index를 조절하면서 여부를 확인해주었다.
+      추가적으로 변경한 nx ny 좌표가 맵의 범위내에서 이동하는지에 대한 여부확인도 필요할것으로 보인다.
