--- a/알고리즘/자료구조/스택.md
+++ b/알고리즘/자료구조/스택.md
@@ -2,7 +2,7 @@
     박스 쌓기에 비유할 수 있다.
     박스를 아래에서 위로부터 차곡차곡 쌓는다
     그리고 아래에 있는 박스를 치우기 위해서는 위에 있는 박스를 먼저 내려야한다.
-    이러한 구조를 선입선출 First In Last Out 구조 혹은 후입선출이라고 한다.
+    - 이러한 구조를 선입선출 First In Last Out 구조 혹은 후입선출이라고 한다.
 
 
 ``` java
