--- a/백준알고리즘/11723.md
+++ b/백준알고리즘/11723.md
@@ -1,8 +1,9 @@
 [백준 11723](https://www.acmicpc.net/submit/11723)
 
-#### 풀이
-    비트 마스킹에 대해 알고 있어야한다. [비트마스킹](https://myeongju00.tistory.com/30)
+#### 풀이 [비트마스킹](https://myeongju00.tistory.com/30)
+    비트 마스킹에 대해 알고 있어야한다. 
     비트마스킹 : 특정 비트나 비트 집합을 조작하기 위해 비트 연산을 사용하는 기술
+
 ##### 원소 추가 add x
     기능 : S에 x를 추가한다. (1 ≤ x ≤ 20) S에 x가 이미 있는 경우에는 연산을 무시한다.
     1 << x  : x번째 값을 1로 설정한다.
