--- a/빅분기 기출/3회차.ipynb
+++ b/빅분기 기출/3회차.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBlWJwze90ghtzFAW5m0J+"
+      "authorship_tag": "ABX9TyOAhfEZgbNpjN0t98lzMzEh"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,12 +24,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 112
+          "height": 113
         },
         "id": "MrgdlC8ygFaH",
-        "outputId": "23f5cd6f-5a54-4f13-84dc-b482f0b0ebab"
+        "outputId": "82a33ef5-91ef-4cc0-8aa1-08900590c184"
       },
-      "execution_count": 76,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -39,9 +39,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-f0b7c787-1206-421e-b637-4dbd23005c82\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-00a6ae3d-0b1f-4b44-a779-dcdd4384f4f1\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-f0b7c787-1206-421e-b637-4dbd23005c82\">\n",
+              "     <output id=\"result-00a6ae3d-0b1f-4b44-a779-dcdd4384f4f1\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -229,8 +229,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving test.csv to test.csv\n",
-            "Saving train.csv to train.csv\n"
+            "Saving train.csv to train.csv\n",
+            "Saving test.csv to test.csv\n"
           ]
         }
       ]
@@ -260,7 +260,7 @@
         "id": "1mUXC7TfjqUO",
         "outputId": "946d7b77-22de-459b-80ce-0a2731b01f98"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +303,7 @@
         "id": "fGQi9m3sh7Zj",
         "outputId": "0c226c73-aa88-4f0b-8f79-c5b745d86af3"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
         "id": "5hU-SDholjfy",
         "outputId": "246e6dee-2adb-40a9-af66-2decdec95981"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,15 +384,19 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "\n",
         "train = pd.read_csv('train.csv')\n",
         "test = pd.read_csv('test.csv')\n",
         "# train.shape,test.shape\n",
         "# train.isnull().sum()\n",
         "# test.isnull().sum()\n",
+        "train.head()\n",
         "train = train.rename(columns={'Unnamed: 0':'id'})\n",
         "test = test.rename(columns={'Unnamed: 0':'id'})\n",
         "\n",
         "train.columns\n",
+        "train.drop('id',axis=1)\n",
         "target = train.pop('TravelInsurance')\n",
         "\n",
         "# combined  = pd.concat([train,test])\n",
@@ -408,6 +412,18 @@
         "  train[col] = le.fit_transform(train[col])\n",
         "  test[col] = le.transform(test[col])\n",
         "\n",
+        "# from sklearn.preprocessing import MinMaxScaler\n",
+        "# cols = train.select_dtypes(exclude='O').columns\n",
+        "# scaler = MinMaxScaler()\n",
+        "# train[cols] = scaler.fit_transform(train[cols])\n",
+        "# test[cols] = scaler.fit_transform(test[cols])\n",
+        "\n",
+        "from sklearn.preprocessing import RobustScaler\n",
+        "cols = train.select_dtypes(exclude='O').columns\n",
+        "scaler = RobustScaler()\n",
+        "train[cols] = scaler.fit_transform(train[cols])\n",
+        "test[cols] = scaler.fit_transform(test[cols])\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "X_tr,X_val,y_tr,y_val = train_test_split(train,target,test_size=0.2,random_state=0)\n",
         "# X_tr.shape,X_val.shape,y_tr.shape,y_val.shape\n",
@@ -416,6 +432,12 @@
         "rf = RandomForestClassifier(n_estimators=300,random_state=0)\n",
         "rf.fit(X_tr,y_tr)\n",
         "pred = rf.predict_proba(X_val)\n",
+        "\n",
+        "# import lightgbm as lgb\n",
+        "# lg = lgb.LGBMClassifier(random_state=0,verbose=1)\n",
+        "# lg.fit(X_tr,y_tr)\n",
+        "# pred = lg.predict_proba(X_val)\n",
+        "\n",
         "\n",
         "from sklearn.metrics import roc_auc_score\n",
         "score = roc_auc_score(y_val,pred[:,1])\n",
@@ -428,34 +450,34 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 225
+          "height": 224
         },
         "id": "P90hlQXxmizi",
-        "outputId": "763961c6-2512-41b8-c1d0-6ccb96683eb5"
+        "outputId": "4fca5d30-2066-4e55-a9f9-fdd80aa88459"
       },
-      "execution_count": 123,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "roc_score 0.861330409356725\n"
+            "roc_score 0.8615253411306043\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   id,  TravelInsurance\n",
-              "0  920         0.223333\n",
-              "1  777         0.110000\n",
-              "2  696         0.093333\n",
-              "3  907         0.996667\n",
-              "4  675         0.186667"
+              "        id,  TravelInsurance\n",
+              "0 -0.060998         0.180000\n",
+              "1 -0.193161         0.246667\n",
+              "2 -0.268022         0.050000\n",
+              "3 -0.073013         0.973333\n",
+              "4 -0.287431         0.186667"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6c1860f5-466c-4600-974a-4d409b51b09b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0bd40326-2969-45f8-abd9-a77638371953\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -481,27 +503,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>920</td>\n",
-              "      <td>0.223333</td>\n",
+              "      <td>-0.060998</td>\n",
+              "      <td>0.180000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>777</td>\n",
-              "      <td>0.110000</td>\n",
+              "      <td>-0.193161</td>\n",
+              "      <td>0.246667</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>696</td>\n",
-              "      <td>0.093333</td>\n",
+              "      <td>-0.268022</td>\n",
+              "      <td>0.050000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>907</td>\n",
-              "      <td>0.996667</td>\n",
+              "      <td>-0.073013</td>\n",
+              "      <td>0.973333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>675</td>\n",
+              "      <td>-0.287431</td>\n",
               "      <td>0.186667</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -510,7 +532,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c1860f5-466c-4600-974a-4d409b51b09b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0bd40326-2969-45f8-abd9-a77638371953')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -562,12 +584,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6c1860f5-466c-4600-974a-4d409b51b09b button.colab-df-convert');\n",
+              "        document.querySelector('#df-0bd40326-2969-45f8-abd9-a77638371953 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6c1860f5-466c-4600-974a-4d409b51b09b');\n",
+              "        const element = document.querySelector('#df-0bd40326-2969-45f8-abd9-a77638371953');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -587,8 +609,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-621237ef-c456-4b29-aea9-2a57c6e966eb\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-621237ef-c456-4b29-aea9-2a57c6e966eb')\"\n",
+              "<div id=\"df-939d2f9e-c545-47dd-a537-62191502cf68\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-939d2f9e-c545-47dd-a537-62191502cf68')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -707,7 +729,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-621237ef-c456-4b29-aea9-2a57c6e966eb button');\n",
+              "        document.querySelector('#df-939d2f9e-c545-47dd-a537-62191502cf68 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -719,40 +741,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"id,\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 114,\n        \"min\": 675,\n        \"max\": 920,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          777,\n          675,\n          696\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TravelInsurance\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.3809388985709447,\n        \"min\": 0.0933333333333333,\n        \"max\": 0.9966666666666668,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.11,\n          0.1866666666666666,\n          0.0933333333333333\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"pd\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"id,\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.10607751251744102,\n        \"min\": -0.2874306839186691,\n        \"max\": -0.0609981515711645,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          -0.1931608133086876,\n          -0.2874306839186691,\n          -0.2680221811460259\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TravelInsurance\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.368181718418742,\n        \"min\": 0.05,\n        \"max\": 0.9733333333333334,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.2466666666666666,\n          0.1866666666666666,\n          0.05\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 123
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test.columns"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TdtSR2DKm65U",
-        "outputId": "530c7785-b1ab-413e-c4ba-e1ca3eede991"
-      },
-      "execution_count": 111,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['id', 'Age', 'Employment Type', 'GraduateOrNot', 'AnnualIncome',\n",
-              "       'FamilyMembers', 'ChronicDiseases', 'FrequentFlyer',\n",
-              "       'EverTravelledAbroad'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 111
+          "execution_count": 10
         }
       ]
     }
