--- a/Spring/토비의 스프링/ch1/스프링의 이해.md
+++ b/Spring/토비의 스프링/ch1/스프링의 이해.md
@@ -1,3 +1,24 @@
+## 1장 목차
+---
+
+- [관심사 분리](#관계설정-책임의-분리)
+    > 책임이 다른 코드를 분리하여 두 개의 클래스로 만들었다.
+- [전략 패턴](#원칙과-패턴)
+    > 바뀔 수 있는 코드는 인터페이스화, 다른 클래스는 인터페이스를 통해 접근한다.
+- [OCP](#원칙과-패턴)
+    > 개방 폐쇠 원칙
+- [결합도와 응집도](#높은-응집도와-낮은-결합도)
+    > 낮은 결합도(한쪽의 기능변화가 다른 쪽의 변경을 요구 X)와 높은 응집도(자신의 책임과 관심사에만 집중)
+- [IOC](#제어의-역전)
+    > 오브젝트가 생성되고 타 오브젝트와 관계를 맺는 작업의 제어권을 별도의 오브젝트 팩토를 만들어 넘겨준다
+- [싱글톤 레지스트리](#싱글톤-레지스트리)
+    > 싱글톤 패턴을 단점을 극복하도록 설계된 컨테이너를 활용하는 방법
+- [DI 주입](#의존관계-주입)
+    > 설계시점 : 클래스와 인터페이스 느슨한 의존관계, 런타임 시 실제 사용할 구체적 의존 오브젝트(제3자 DI 컨테이너) 도움을 통해 주입
+- [의존 관계 주입](#의존관계-주입-방법)
+    > 생성자 방식과 수정자 메소드 방식
+- XML 설정을 통한 DI 설정 
+
 ## 관계설정 책임의 분리
 ---
 - DB 커넥션
@@ -12,7 +33,7 @@ UserDao 클라이언트에서 UserDao를 사용하기 전에, 먼저 UserDao가 
 이때 관계 설정을 위해 오브젝트가 필요한데, 내/외부 관계없다.<br>
 외부에서 만든 오브젝트인 경우, 메소드/ 생성자 파라미터를 이용하면 된다.
 ```
-> ConnectionMaker -> DConnectionMaker //NConnectionMaker
+> ConnectionMaker -> DConnectionMaker ||  NConnectionMaker
 >> connectionMaker = new DConnectionMaker();
 
 이는 객체지향 프로그래밍의 다형성이라는 특징을 사용하였다.<br/>
@@ -69,7 +90,7 @@ public class UserDaoTest {
 예시 : UserDao 와 ConnectionMaker 간의 느슨한 결합
 ```
 
-- 전략 패턴
+## 전략 패턴
 ```
 기능 맥락에서, 필요에 따라 변경이 필요한 알고리즘을 인터페이스를 통해 통쨰로 외부로 분리시키고,
 이를 구현한 구체적인 알고리즘 클래스를 필요에 따라 바꿔서 사용하는 디자인 패턴
@@ -80,7 +101,7 @@ public class UserDaoTest {
 >> ConnectionMaker DB 연결 방식 알고리즘
 
 
-## 제어의 역전 IOC
+## 제어의 역전
 ----
 - 오브젝트 팩토리
 ```
@@ -264,8 +285,7 @@ public class UserDao{
 3. 서버환경에서 싱글톤이 하나만 만들어지는 것을 보장하지 못한다.(서버환경)
 4. 싱글톤의 사용은 전역 상태를 만들 수 있기 때문에 바람직하지 못하다. -> static 메소드를 이용해 접근하다보면 전역 상태로 사용된다.
 
-
-- 싱글톤 레지스트리
+## 싱글톤 레지스트리
 ```
 스프링은 직접 싱글톤 형태의 오브젝트를 만들고 관리하는 기능을 제공한다. -> 싱글톤 레지스트리
 싱글톤 레지스트리의 장점은 static 메소드와 private 생성자를 사용해야 하는 비정상적인 클래스가 아니라 평범한 자바 클래스를 싱글톤으로 활용하게 해준다는 점이다.
@@ -274,7 +294,7 @@ IoC 방식의 컨테이너를 사용해 생성과 관계설정 사용 등에 대
 이를 통해 매번 동일한 오브젝트를 받게 된다.
 ```
 
-- 상태가 없는 방식으로 클래스를 만들자. -> 로컬변수를 인스턴스 필드로 선
+- 상태가 없는 방식으로 클래스를 만들자. -> 로컬변수를 인스턴스 필드로 선언
 ```
 public class UserDao{
     private ConnectionMaker connectionMaker;
@@ -304,7 +324,78 @@ public class UserDao{
 ```
 의존관계 주입이란 아래의 세 가지 조건을 충족하는 작업을 말한다.
 1. 클래스 모델이나 코드에는 런타임 시점의 의존관계가 드러나지 않는다. 그러기 위해서는 인터페이스에만 의존하고 있어야 한다.
-2. 런타임 시점의 의존관계는 컨테이너나 팩토리 같은 제3의 존재가 결정한다.
+2. 런타임 시점의 의존관계는 컨테이너나 팩토리 같은 제3의 존재(DaoFactory)가 결정한다.
 3. 의존관계는 사용할 오브젝트에 대한 레퍼런스를 외부에서 제공(주입)해줌으로써 만들어진다.
 ```
-P-115
+```
+// 이미 의존관계가 다 설정되어있다.
+public UserDao{
+    connectionMaker = new DConnectionMaker();
+}
+```
+> 주입이란?
+>> 외부에서 내부로 무엇인가를 넘겨줘야 하는것, 오브젝트에 넣어준다는 것은 메소드를 실행하면서 파라미터로 오브젝트의 레퍼런스를 전달해주는 방법.<br/>
+>> DI는 자신이 사용할 오브젝트(DconnectionMaker)에 대한 선택과 생성 제어권을 외부에 넘기고(제3의 존재) 자신은 수동적으로 주입받은 오브젝트를 사용한다.
+```
+public class UserDao{
+    private ConnectionMaker connectionMaker;
+    
+    public UserDao(ConnectionMaker connectionMaker){
+        this.connectionMaker = connectionMaker;
+    }
+    ...
+}
+```
+- 의존관계 검색 Dependency LookUp
+> 자신이 필요로 하는 의존 오브젝트 능동적으로 찾는다
+```
+// 애플리케이션 컨텍스트의 getBean() 메소드를 통해 찾는다.
+public UserDao(){
+    AnnotationConfigApplicationContext context = 
+        new AnnotationConfigApplicationContext(DaoFactory.class);
+    this.connectionMaker = context.getBean("connectionMaker",ConnectionMaker.class);
+}
+```
+
+- DI의 활용예시
+> 개발 과정 중 사용한 Local DB에서 배포를 위한 서버 DB 연결을 해야한다면?
+>> DI를 하지않았다면 Local DB에 의존하고 있기 때문에 수정 시 연관된 코드 전부를 수정/변경해야한다.
+
+> 반면에 DI를 적용하였다면>
+```
+@Bean
+public ConnectionMaker connectionMaker(){
+    // 개발 시
+    return new LocalDBConnectionMaker();
+    
+    // 운영 시
+    return new ProductionDBConnectionMaker();
+}
+```
+
+## 의존관계 주입 방법
+- 메소드를 통한 의존관계 주입
+
+1. 수정자 메소드를 이용한 주입
+> Setter 메소드를 통한 파라미터로 전달된 값을 내부의 인스턴스 변수에 저장해두고 메소드에서 사용하게 하는 DI방식
+```
+public class UserDao{
+    private ConnectionMaker connectionMaker;
+    
+    // 수정자 메소드 DI 방식식    
+    public void setConncetionMaker(ConnectionMaker connectionMaker){
+        this.connectionMaker = connectionMaker;
+    }
+}
+
+@Bean
+public UserDao userDao() {
+    UserDao userDao = new UserDao();
+    userDao.setConncetionMaker(connectionMaker());
+    return userDao;
+}
+```
+2. 일반 메소드를 이용한 주입
+> 하나가 아닌 여러 개의 파라미터 개수를 통한 초기화 메소드 ex) 생성자
+
+
