--- a/알고리즘/이진탐색/부품찾기.md
+++ b/알고리즘/이진탐색/부품찾기.md
@@ -65,6 +65,30 @@ public class Main {
 }
 ```
 
+- 반복문
+```
+static void binary_search(int data){
+    int start = 0;
+    int end = N-1;
+    
+    while(start<=end){
+        int mid = (start + end) /2;
+
+        
+        if(shop[mid]==data){
+            System.out.println("YES");
+            return;
+        }
+        if(shop[mid] <data){
+            start = mid+1;
+        }else (shop[mid] > data){
+            end = mid-1;
+        }
+    }
+    System.out.println("NO");
+}
+```
+
 #### 시간복잡도
     부품 Parts 배열을 정렬하는 Arrays.sort()는 O(N logN)의 시간복잡도가 발생한다.
     M개에 대한 이진탐색을 요청하므로 O(M logN)의 시간복잡도가 발생한다.
