Update 떡볶이 떡 만들기.md

--- a/알고리즘/이진탐색/떡볶이 떡 만들기.md
+++ b/알고리즘/이진탐색/떡볶이 떡 만들기.md
@@ -53,4 +53,35 @@ public class Main {
 }
 ```
 
-    
+- 개선된 코드
+```
+ static int maxCut(){
+        int start =0;
+        int mid =0;
+        int result = 0;  
+        int end = shop[N-1];
+        while(start<=end){
+            mid = (start + end) /2;
+            
+            int cutSize =0;
+            
+            for(int data:shop){
+                if(mid<data){
+                    cutSize+= data-mid;
+                }
+                
+            }
+            if(cutSize==target){
+                result = mid;
+                start = mid+1;
+                }
+            if(cutSize >target){
+                result = mid;
+                start = mid+1;
+            }else{
+                end = mid-1;
+            }
+        }
+        return result;
+    }
+```  
