--- a/C#/C#10과 .NET/ch2/요약.md
+++ b/C#/C#10과 .NET/ch2/요약.md
@@ -80,3 +80,136 @@ Fido와 Bob은 변수이며 특정 대상을 가리키는 명사다.
 `그렇다면 형식의 수는 몇개일까?`<BR/>
 > 형식 및 메소드 수는 운영체제에 따라 다르다. C#이 어려운 이유는 배워야 할 형식과 메소드가 굉장히 많다.<BR/>
 > 메소드는 형식이 가질수 있는 멤버 중 하나일 뿐이며, 많은 개발자가 계속해서 새로운 형식과 멤버를 정의하고 있다.
+
+
+## 변수
+---
+- 변수
+> 모든 프로그램은 데이터를 필수로 다룬다. 데이터를 입력받고 처리하고 출력한다.
+> 데이터는 보통 파일이나 DB 또는 사용자 입력을 통해 가져오며, 프로그램이 실행되는 동안 메모리에 유지되는 변수에 임시로 저장할 수 있다.
+> 변수를 사용시, 얼마나 많은 메모리 공간을 차지하는 따져 봐야하고, 그다음 얼마나 빨리 처리해야 하는지 판단해야 한다.
+
+- 변수 이름 규칙
+> 일관성 있는 이름 규칙은 동료들이 코드를 빠르고 쉽게 이해하는데 도움을 준다.
+| 이름 규칙  | 예시   | 사용되는 곳   |
+|------------|------------|------------|
+| 카멜 케이스(Camel case) | cost, orderDetail, dateOfBirth | 지역 변수, private 멤버 |
+| 파스칼/타이틀(Pascal/Title) 케이스 | String, Int32, Cost, DateOfBirth, Run | 타입 이름, non-private 멤버 |
+
+- 리터털 값
+> 변수에 값을 할당할 때 리터럴(Literal) 값을 자주 사용한다. 리터럴은 고정 값을 나타내는 표기법이며 데이터 타입별로 다른 표기법을 가진다.
+
+- 타이틀 저장
+> A처럼 문자 1개는 char 타입에 저장된다.
+```
+char letter = 'A';  // 리터럴 문자 할당
+char digit = '1';
+char symbol = '$';
+char userChoice = GetSomeKeystroke(); / 함수 호출에서 할당
+```
+```
+string name = "Bob";
+string firstName ="Bob";
+string lastName = "Smith";
+string phoneNumber = "(215) 555-4256";
+// 함수 호출에서 반환된 문자열 할당
+string address = GetAddressFromDatabase(id :563);
+```
+
+- 축약 문자열 이해하기
+> string 변수에 텍스트를 저장할 때 백슬래스 활용하여 탭 및 새줄과 같은 특수 문자를 나타낼 수 있다.
+
+` string fullNameWithTabSeperator = "Bob\tSmith"l`
+> 만약 윈도우에서 파일 경로를 저장할 대 폴더 이름 중 하나가 T 로 시작한다면?
+
+`string filePath = "C:\televisions\sony\bravia.txt"; `
+> 컴파일러는 \t 를 탭 문자로 변환하기 때문에 오류가 발생한다. 이때 @ 접두사로 축약 문자열을 사용한다.
+
+`string filePath = @"C:\televisions\sony\bravia.txt"; `
+
+### 숫자
+---
+- 숫자 저장
+> 숫자는 곱셈 같은 산술 연산이 필요할 때 사용하는 데이터다.
+>> 변수의 타입을 숫자로 해야 할지 아닌지를 판단하려면 괄호 (())) 나 하이픈(-)처럼 특수문자가 포함되는지,<br/> 같은 타입의 두 변수를 서로 곱할 필요가 없는지 생각해야한다.
+
+- 양의 정수 저장
+> 컴퓨터는 모든 것을 bit로 저장한다(0과 1). Binary <br/>
+> 일상생활에서는 10진수 Decimal 시스템이 사용된다.
+
+- 향상된 숫자 지원
+> C# 7.0 이상에서 향상된 숫자 지원 기능 두가지는 자리를 구분하는 기호로 _ (UnderScore Character)와 2진수 리터럴 자원이다.
+
+- 양의 정수 살펴보기
+```
+int decimalNotation = 2_000_000;
+int binaryNotation = 0b_0001_1110_1000_0100_1000_0000;
+int hexadecimalNotation = 0x_001E_8480;
+
+Console.WriteLine($"{decimalNotation == binaryNotation}");
+Console.WriteLine(
+    $"{decimalNotation == hexadecimalNotation}"
+);
+```
+
+```
+//출력결과
+True
+True
+```
+
+- 실수 저장
+> 컴퓨터는 실수를 정확하게 표현할수 없다. float 나 double 타입은 단정밀도 및 배정밀도 부동소수점을 사용해서 실수를 저장한다.<BR/>
+대부분의 프로그래밍 언어는 부동 소수점 산술에 대한 IEEE 표준을 구현한다.
+
+- Double과 Decimal 비교
+```
+Console.WriteLine("Using doubles");
+
+double a = 0.1;
+double b = 0.2;
+if (a+b == 0.3)
+{
+    Console.WriteLine($"{a} + {b} equals 0.3");
+}else{
+    Console.WriteLine($"{a} +{b} does Not equal 0.3");
+}
+```
+```
+Console.WriteLine("Using decimals");
+decimal c = 0.1M;
+decimal d = 0.2M;
+if(c +d == 0.3M){
+        Console.WriteLine($"{c} + {d} equals 0.3");
+}else{
+    Console.WriteLine($"{c} +{d} does Not equal 0.3");
+}
+```
+> 두개의 결과는 다르게 나온다.(Double버전 :not equal,  Decimal 버전 : equal)
+>> double 형식은 0.1과 같은 일부 숫자는 문자 그대로의 부동 소수점 값으로 표현할 수 없기 때문에 정확성을 보장하지 않는다.<br/>
+>> decimal 타입은 실수의 소수점을 이동시켜 양의 정수로 바꾼 뒤 저장하기 때문에 정확성이 보장된다.
+
+
+- 불린 형식
+> Boolean 형식은 true나 false 둘 중 하나의 값만 가진다.
+
+- Object 형식
+> 오브젝트 형식은 어떤 데이터도 저장할 수 있는 특별한 형식이다.<br/>
+> 이런 유연함은 코드를 지저분하게 하고, 박싱(Boxing), 언박싱(Unboxing) 과정을 거치므로 성능 저하도 가져오므로 가능하다면 object 형식 사용을 피하자
+```
+object height = 1.88;
+object name = "Amir";
+
+Console.WriteLine($"{name} is {height} metres tall.");
+// name 변수의 데이터 형식을 알수없기 때문에 컴파일 에러가 발생
+// int length1 = name.Length;
+// (string) 캐스트가 필요하다.
+int length2 = ((string)name).Length;
+
+Console.WriteLine($"{name} has {length2} characters.");
+```
+```
+// 출력결과
+Amir is 1.88 metres tall.
+Amir has 4 characters.
+```
