--- a/C#/C#10과 .NET/ch2/요약.md
+++ b/C#/C#10과 .NET/ch2/요약.md
@@ -213,3 +213,11 @@ Console.WriteLine($"{name} has {length2} characters.");
 Amir is 1.88 metres tall.
 Amir has 4 characters.
 ```
+
+- dynamic 형식
+> Object 형식에 비해 명시적 변환없이 멤버 호출이 가능하지만 성능저하가 더 크다.
+
+
+- 지역 변수
+> 메소드 안에서 선언되며 그 메서드가 호출하는 동안에만 존재한다. 메소드가 반환되면 지역 변수에 할당된 메모리도 해제된다.
+  > 지역변수의 추론 : var 키워드
