--- a/C#/C#10과 .NET/ch2/요약.md
+++ b/C#/C#10과 .NET/ch2/요약.md
@@ -221,3 +221,38 @@ Amir has 4 characters.
 - 지역 변수
 > 메소드 안에서 선언되며 그 메서드가 호출하는 동안에만 존재한다. 메소드가 반환되면 지역 변수에 할당된 메모리도 해제된다.
   > 지역변수의 추론 : var 키워드
+```
+XmlDocument xml2 = new XmlDocument();
+// 불필요한 XmlDocument 반복을 제거
+var xml1 = new XmlDocument():
+
+var file = File.CreateText(@"C:\something.txt");
+// 형식이 명확하지 않으므로 var 사용을 지양
+StreamWriter file2= File.CreateText(@"C:\something.txt");
+```
+
+- 대상으로 형식화된 new 키워드
+
+` XmlDocument xml3 = new(); ` // 대상으로 형식화된 new(C# 9.0 이상), 객체의 인스턴스를 만든다.
+
+- 형식 기본값 가져오기 & 설정
+
+> String 형식(Reference Type)을 제외한 대부분의 원시 형식(Primitive Type)은 값 형식(Value Type)이다. 즉 반드시 기본값을 가져야 한다.
+
+- 배열 : 여러 값 저장
+> 동일한 타입의 값을 여러 개 저장할 필요가 있다면 배열(Array)를 사용한다.
+
+
+### 콘솔 애플리케이션 알아보기
+---
+
+- 콘솔 프로그램
+```
+콘솔 프로그램은 텍스트 기반의 명령 프롬프트에서 동작하다.
+보통 , 파일을 컴파일 하거나, 설정 파일을 암호화 하는 등 단순한 기능을 처리한다.
+실행 매개 변수를 받아서 매개 변수 값에 따라 동작을 다르게 처리할 수도 있다.
+```
+
+- 콘솔 출력
+
+` WriteLine (줄단위 출력)/ Write (현재 위치에 이어서 사용) `
